# Neural-Network-In-Cpp

./: .gitignore  CMakeLists.txt  README.md  data_cleaning.ipynb  nn.ipynb
data/: housing_.csv  processed_data.csv  test_data.csv  train_data.csv
include/: ActivationFun.h  LinearLayer.h  LossFun.h  Optimizer.h
src/: ActivationFun.cpp  LinearLayer.cpp  LossFun.cpp  NeuralNetwork.cpp  Optimizer.cpp  Utilities  Utilities.cpp  main  main.cpp  rooster
src/Utilities.dSYM/Contents/: Info.plist
src/Utilities.dSYM/Contents/Resources/DWARF/: Utilities
src/Utilities.dSYM/Contents/Resources/Relocations/aarch64/: Utilities.yml
src/bindings/: bindings.cpp  bindings_activations.cpp  bindings_layers.cpp  bindings_losses.cpp  bindings_optimizers.cpp
